# sprawn

./: .gitignore  CLAUDE.md  CMakeLists.txt  FONT_FALLBACK.md  LICENSE  README.md  syntax-highlight-plan.md  unicode.txt
examples/: CMakeLists.txt  demo.cpp
include/sprawn/: backend.h  color.h  decoration.h  document.h  encoding.h  frontend.h  source.h
include/sprawn/frontend/: application.h  decoration_compositor.h  editor.h  events.h  input_handler.h  line_cache.h  renderer.h  text_layout.h  viewport.h  window.h
include/sprawn/middleware/: controller.h  decoration_source.h  syntax_highlighter.h
plans/: initial-backend-plan.md  initial-frontend-plan.md
src/: main.cpp
src/backend/: CMakeLists.txt  backend.cpp  document.cpp  encoding.cpp  encoding.h  file_source.cpp  file_source.h  line_index.cpp  line_index.h  lorem_ipsum_source.cpp  lorem_ipsum_source.h  mapped_file.cpp  mapped_file.h  mmap_document.cpp  mmap_document.h  piece_table.cpp  piece_table.h  piece_table_document.cpp  piece_table_document.h  string_array_document.cpp  string_array_document.h
src/frontend/: CMakeLists.txt  application.cpp  decoration_compositor.cpp  editor.cpp  font.cpp  font.h  font_chain.cpp  font_chain.h  font_face.cpp  font_face.h  frontend.cpp  glyph_atlas.cpp  glyph_atlas.h  glyph_cache.cpp  glyph_cache.h  input_handler.cpp  line_cache.cpp  renderer.cpp  renderer.h  text_layout.cpp  text_layout.h  util.h  viewport.cpp  window.cpp  window.h
src/middleware/: CMakeLists.txt  controller.cpp  syntax_highlighter.cpp
tests/: CMakeLists.txt  test_controller.cpp  test_decoration_compositor.cpp  test_document.cpp  test_line_index.cpp  test_piece_table.cpp  test_syntax_highlighter.cpp
